# crust

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  ir.c  ir.h  linkedlist.c  linkedlist.h  list.c  list.h  main.c  preprocess.c  preprocess.h  register.c  register.h  stack.c  stack.h  token.c  token.h  types.c  types.h
.github/workflows/: build.yml
examples/: busy_beaver_4.crs  calculate.crs  counting.crs  recursive_fib.crs  test.crs
src/: ast.c  ast.h  codegen.c  codegen.h  ir.c  ir.h  main.c  parse.c  parse.h  preprocess.c  preprocess.h  register.c  register.h  result.c  result.h  token.c  token.h  types.c  types.h  util.c  util.h
src/struct/: linkedlist.c  linkedlist.h  list.c  list.h  stack.c  stack.h
